# tropical-gemm

./: .gitignore  Cargo.toml  Makefile  README.md  tarpaulin.toml
.github/workflows/: ci.yml  coverage.yml  docs.yml
benchmarks/: bench_c_cuda.cu  bench_julia.jl  bench_julia_fallback.jl  bench_metal.sh  compare_rust_julia.jl  run_comparison.sh
crates/tropical-gemm/: Cargo.toml
crates/tropical-gemm-core/: Cargo.toml
crates/tropical-gemm-core/src/: argmax.rs  gemm.rs  kernel.rs  lib.rs  packing.rs  tiling.rs
crates/tropical-gemm-cuda/: Cargo.toml
crates/tropical-gemm-cuda/benches/: tropical_ad_bench.rs
crates/tropical-gemm-cuda/examples/: bench_cuda_vs_cpu.rs
crates/tropical-gemm-cuda/kernels/: tropical_gemm.cu
crates/tropical-gemm-cuda/src/: context.rs  error.rs  gpu_mat.rs  kernels.rs  lib.rs  memory.rs
crates/tropical-gemm-metal/: Cargo.toml
crates/tropical-gemm-metal/examples/: bench_comparison.rs  bench_metal.rs
crates/tropical-gemm-metal/shaders/: tropical_gemm.metal
crates/tropical-gemm-metal/src/: context.rs  error.rs  kernels.rs  lib.rs  memory.rs
crates/tropical-gemm-python/: Cargo.toml  README.md  pyproject.toml
crates/tropical-gemm-python/examples/: mnist_tropical.py  pytorch_tropical.py
crates/tropical-gemm-python/python/tropical_gemm/: __init__.py  pytorch.py
crates/tropical-gemm-python/src/: lib.rs
crates/tropical-gemm-python/tests/: test_julia_reference.py  test_pytorch_gradients.py
crates/tropical-gemm-python/tests/fixtures/: README.md  julia_generator.jl
crates/tropical-gemm-python/tests/fixtures/andor_bool/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/counting_f32/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/maxmul_f32/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  special_zeros_square_16.json  special_zeros_square_8.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/maxmul_f64/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/maxplus_f32/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  special_negative_square_16.json  special_negative_square_8.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/maxplus_f64/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/minplus_f32/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  special_negative_square_16.json  special_negative_square_8.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-python/tests/fixtures/minplus_f64/: batched_square_16_b3.json  batched_square_8_b3.json  rect_12x24x18.json  square_16.json  square_30.json  square_4.json  square_8.json
crates/tropical-gemm-simd/: Cargo.toml
crates/tropical-gemm-simd/src/: detect.rs  dispatch.rs  lib.rs
crates/tropical-gemm-simd/src/kernels/: avx2.rs  mod.rs  neon.rs  portable.rs
crates/tropical-gemm/benches/: gemm_bench.rs
crates/tropical-gemm/examples/: basic.rs  bench_rust.rs  shortest_path.rs
crates/tropical-gemm/src/: api.rs  backend.rs  lib.rs
crates/tropical-gemm/src/core/: argmax.rs  gemm.rs  kernel.rs  mod.rs  packing.rs  tiling.rs
crates/tropical-gemm/src/mat/: mod.rs  mut_.rs  ops.rs  owned.rs  ref_.rs
crates/tropical-gemm/src/simd/: detect.rs  dispatch.rs  mod.rs
crates/tropical-gemm/src/simd/kernels/: avx2.rs  mod.rs  neon.rs  portable.rs
crates/tropical-gemm/src/types/: and_or.rs  counting.rs  max_mul.rs  max_plus.rs  min_plus.rs  mod.rs  traits.rs
crates/tropical-types/: Cargo.toml
crates/tropical-types/src/: and_or.rs  counting.rs  lib.rs  max_mul.rs  max_plus.rs  min_plus.rs  scalar.rs  traits.rs
docs/book/: 404.html  api-reference.html  architecture.html  blis.html  changelog.html  cuda.html  getting-started.html  gpu.html  installation.html  introduction.html  matrix-api.html  performance.html  print.html  pytorch.html  quick-start.html  semirings.html  simd.html  troubleshooting.html
docs/plans/: 2026-01-26-tropical-einsum-design.md
docs/src/: installation.md  pytorch.md
