[workspace]
resolver = "2"
members = [
    "crates/tropical-gemm-cuda",
    "crates/tropical-gemm",
    "crates/tropical-gemm-python",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Leo"]
repository = "https://github.com/TensorBFS/tropical-gemm"

[workspace.dependencies]
# Internal crates
tropical-gemm-cuda = { version = "0.2.0", path = "crates/tropical-gemm-cuda" }
tropical-gemm = { version = "0.2.0", path = "crates/tropical-gemm" }

# External dependencies
num-traits = "0.2"
wide = "0.7"
rayon = "1.10"
cudarc = { version = "0.12", features = ["driver", "nvrtc", "cuda-12020"] }
thiserror = "1.0"

# Testing
criterion = "0.5"
proptest = "1.0"
