[package]
name = "tropical-gemm-cuda"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CUDA backend for tropical matrix multiplication"

[dependencies]
tropical-gemm = { workspace = true }
cudarc = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "tropical_ad_bench"
harness = false
