[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "tropical-gemm"
version = "0.1.0"
description = "Fast tropical matrix multiplication with automatic differentiation support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["tropical", "semiring", "matrix", "gemm", "optimization"]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
torch = ["torch>=2.0"]
dev = ["pytest", "torch>=2.0"]

[project.urls]
Repository = "https://github.com/TensorBFS/tropical-gemm"

[tool.maturin]
features = ["pyo3/extension-module", "cuda"]
module-name = "tropical_gemm._core"
python-source = "python"
