[package]
name = "tropical-gemm-simd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SIMD-optimized microkernels for tropical GEMM"

[dependencies]
tropical-types = { workspace = true }
tropical-gemm-core = { workspace = true }
num-traits = { workspace = true }
wide = { workspace = true }
