[package]
name = "tropical-gemm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "High-performance tropical matrix multiplication with BLAS-level performance"

[dependencies]
num-traits = { workspace = true }
rayon = { workspace = true }
wide = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "gemm_bench"
harness = false
